[workspace]
members = [
  "iroh-mainline-content-discovery",
  "iroh-mainline-content-discovery-cli",
  "iroh-mainline-tracker",
]
resolver = "2"

[profile.release]
debug = true

[profile.optimized-release]
inherits = 'release'
debug = false
lto = true
debug-assertions = false
opt-level = 3
panic = 'abort'
incremental = false


[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unused-async = "warn"

[workspace.dependencies]
iroh = { version ="0.35", features = ["discovery-pkarr-dht"] }
iroh-base = "0.35"
iroh-blobs = { version = "0.35", features = ["rpc"] }
# explicitly specified until iroh minimal crates issues are solved, see https://github.com/n0-computer/iroh/pull/3255
tokio = { version = "1.44.1" }
tokio-stream = { version = "0.1.17" }
mainline = { version = "5.4.0", default-features = false }
pkarr = { version = "3.7.0", default-features = false }
postcard = { version = "1", default-features = false }
quinn = { package = "iroh-quinn", version = "0.13", default-features = false }
anyhow = { version = "1", default-features = false }
futures = { version = "0.3.25" }
rcgen = { version = "0.13.1" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
genawaiter = { version = "0.99.1", features = ["futures03"] }
