[workspace]
members = [
  "iroh-mainline-content-discovery",
  "iroh-mainline-content-discovery-cli",
  "iroh-mainline-tracker",
]
resolver = "2"

[profile.release]
debug = true

[profile.optimized-release]
inherits = 'release'
debug = false
lto = true
debug-assertions = false
opt-level = 3
panic = 'abort'
incremental = false


[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unused-async = "warn"

[workspace.dependencies]
iroh = { version ="0.35", features = ["discovery-pkarr-dht"] }
iroh-base = "0.35"
iroh-blobs = { version = "0.35", features = ["rpc"] }
# explicitly specified until iroh minimal crates issues are solved, see https://github.com/n0-computer/iroh/pull/3255
tokio = { version = "1.44.1" }
tokio-stream = { version = "0.1.17" }
postcard = { version = "1", default-features = false }
anyhow = { version = "1", default-features = false }
n0-future = { version = "0.1.3" }
futures-buffered = { version = "0.2.11" }
