[workspace]
members = [
  "iroh-content-discovery",
  "iroh-content-discovery-cli",
  "iroh-content-tracker",
]
resolver = "2"

[profile.release]
debug = true

[profile.optimized-release]
inherits = 'release'
debug = false
lto = true
debug-assertions = false
opt-level = 3
panic = 'abort'
incremental = false


[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unused-async = "warn"

[workspace.dependencies]
iroh = "1.0.0-rc.1"
iroh-base = "1.0.0-rc.1"
iroh-blobs = "0.102"
iroh-mainline-address-lookup = "0.3"
# explicitly specified until iroh minimal crates issues are solved, see https://github.com/n0-computer/iroh/pull/3255
tokio = { version = "1.44.1" }
tokio-stream = { version = "0.1.17" }
postcard = { version = "1", default-features = false }
anyhow = "1"
n0-future = { version = "0.3" }
futures-buffered = { version = "0.2.11" }
