[package]
name = "gossipsub"
edition = "2021"
description = "Gossipsub protocol"
version = "0.46.2"
authors = ["Age Manning <Age@AgeManning.com>"]
license = "MIT"
repository = "https://github.com/n0-computer/iroh-experiments"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[features]
wasm-bindgen = ["getrandom/js"]

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.6"
either = "1.11"
fnv = "1.0.7"
futures = "0.3"
futures-ticker = "0.0.3"
getrandom = "0.2.15"
hex_fmt = "0.3.0"
web-time = "1.1"
quick-protobuf = "0.8"
rand = "0.8"
regex = "1.10.5"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"
smallvec = "1.13.2"
tracing = "0.1"
void = "1.0.2"
iroh-metrics = "0.20"
iroh = "0.20.0"
tokio = { version = "1", features = ["full"] } # TODO: reduce features
prometheus-client = "0.22.2"
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-serde-postcard = "0.1.0"
tokio-serde = "0.9.0"
postcard = "1.0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hex = "0.4.2"
quickcheck = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
