[package]
name = "h3-iroh"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1", optional = true }
axum = { version = "0.8", optional = true }
bytes = "1"
futures = "0.3"
h3 = { version = "0.0.8", features = ["tracing"] }
http = { version =  "1.1", optional = true }
http-body = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.5", optional = true }
hyper-util = { version = "0.1", optional = true }
iroh = "0.95"
iroh-tickets = "0.2"
tokio = { version = "1", features = ["io-util"], default-features = false}
tokio-util = "0.7"
tower = { version = "0.5", optional = true }
tracing = "0.1"

[features]
axum = [
     "dep:anyhow",
     "dep:axum",
     "dep:http",
     "dep:http-body",
     "dep:http-body-util",
     "dep:hyper",
     "dep:hyper-util",
     "dep:tower",
]

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
http = "1"
tracing-subscriber = "0.3"

[[example]]
name = "server-axum"
required-features = ["axum"]
