[package]
name = "iroh-dag-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh-blobs = "0.30"
iroh-gossip = "0.30"
iroh = "0.30"
iroh-base = { version ="0.30", features = ["ticket"] }
iroh-car = "0.5.0"
redb = "2.1.1"
clap = { version = "4.5.7", features = ["derive"] }
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
postcard = "1.0.8"
serde = { version = "1.0.203", features = ["derive"] }
futures-lite = "2.3.0"
iroh-io = "0.6"
tokio-util = { version = "0.7.11", features = ["rt"] }
bao-tree = "0.13.0"
genawaiter = "0.99.1"
iroh-quinn = "0.12"
bytes = "1.6.0"
hex = "0.4.3"
ron = "0.8.1"
rand = "0.8.5"
tracing = "0.1.40"
serde_bytes = "0.11.14"
ipld-core = "0.4.1"
multihash = "0.19.1"
cid = { version = "0.11.1", features = ["serde"] }
multihash-codetable = "0.1.3"
serde_ipld_dagcbor = "0.6.1"

[patch.crates-io]
iroh = { git = "https://github.com/n0-computer/iroh.git", branch = "iroh-0-31-0" }
iroh-base = { git = "https://github.com/n0-computer/iroh.git", branch = "iroh-0-31-0" }
iroh-blobs = { git = "https://github.com/n0-computer/iroh-blobs.git", branch = "iroh-0-31-0" }
iroh-gossip = { git = "https://github.com/n0-computer/iroh-gossip.git", branch = "iroh-0-31-0" }
