[package]
name = "iroh-dag-sync"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
iroh-blobs = "0.102"
iroh-gossip = "0.100"
iroh = "1.0.0-rc.1"
iroh-tickets = "1.0.0-rc.1"
iroh-car = "0.5"
redb = "4.1"
clap = { version = "4.5.7", features = ["derive"] }
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
postcard = "1.0.8"
serde = { version = "1.0.203", features = ["derive"] }
futures-lite = "2.3.0"
iroh-io = "0.6"
tokio-util = { version = "0.7.11", features = ["rt"] }
bao-tree = "0.16.0"
genawaiter = "0.99.1"
bytes = "1.6.0"
hex = "0.4.3"
ron = "0.11"
rand = "0.9.2"
tracing = "0.1.40"
serde_bytes = "0.11.14"
ipld-core = "0.4.1"
multihash = "0.19.1"
cid = { version = "0.11.1", features = ["serde"] }
multihash-codetable = "0.2"
serde_ipld_dagcbor = "0.6.1"
