[package]
name = "iroh-pkarr-naming-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
derive_more = "0.99.17"
iroh = "0.32"
iroh-blobs = "0.31"
pkarr = { version = "2.3.1", features = ["async", "dht"] }
tokio = "1.35.1"
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
iroh-blobs = { git = "https://github.com/n0-computer/iroh-blobs.git", branch = "iroh-0-32-0"}
