[package]
name = "iroh-content-discovery-cli"
version = "0.2.0"
edition = "2021"
description = "Content discovery for iroh, using a simple tracker protocol"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-content-discovery = { path = "../iroh-content-discovery", version = "0.2.0" }
anyhow = { workspace = true, features = ["backtrace"] }
futures = { version = "0.3.25" }
clap = { version = "4", features = ["derive"] }
tempfile = { version = "3.4" }
derive_more = { version = "1.0.0-beta.1", features = ["debug", "display", "from", "try_into"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["io-util", "rt"] }
