[package]
name = "iroh-content-tracker"
version = "0.1.0"
edition = "2021"
description = "Content tracker for iroh, using a simple tracker protocol"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
# needs to keep updated with the dep of iroh-blobs
bao-tree = { version = "0.15.1", features = ["tokio_fsm"], default-features = false }
bytes = "1"
derive_more = { version = "1", features = ["debug", "display", "from", "try_into"] }
dirs-next = "2"
ed25519-dalek = "2.1.0"
futures = "0.3.25"
hex = "0.4.3"
humantime = "2.1.0"
iroh = { workspace = true }
iroh-blobs = { workspace = true }
postcard = { workspace = true, features = ["alloc", "use-std"] }
rand = "0.8"
rcgen = "0.12.0"
redb = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.4"
tokio = { version = "1", features = ["io-util", "rt"] }
tokio-util = { version = "0.7", features = ["io-util", "io", "rt"] }
toml = "0.7.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ttl_cache = "0.5.1"
url = "2.5.0"
iroh-content-discovery = { path = "../iroh-content-discovery", features = ["client"] }

clap = { version = "4", features = ["derive"], optional = true }
serde-big-array = "0.5.1"

[features]
cli = ["clap"]
default = ["cli"]

[[bin]]
name = "iroh-content-tracker"
required-features = ["cli"]
