[package]
name = "iroh-mainline-content-discovery"
version = "0.6.0"
edition = "2021"
description = "Content discovery for iroh, using the bittorrent mainline DHT"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Required features for the protocol types.
#
# The protocol is using postcard, but we don't need a postcard dependency for just the type definitions
iroh = { workspace = true }
iroh-base = { workspace = true }
iroh-blobs = { workspace = true }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
derive_more = { version = "1.0.0-beta.1", features = ["debug", "display", "from", "try_into"] }
serde-big-array = "0.5.1"
hex = "0.4.3"

# Optional features for the client functionality
tracing = { version = "0.1", optional = true }
quinn = { workspace = true, optional = true }
mainline = { workspace = true, optional = true, features = ["async"] }
anyhow = { workspace = true, features = ["backtrace"], optional = true }
postcard = { workspace = true, features = ["alloc", "use-std"], optional = true }
futures = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
rustls = { workspace = true, features = ["ring"], optional = true }
genawaiter = { version = "0.99.1", features = ["futures03"], optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true }

# dependencies for the tls utils
der = { version = "0.7", features = ["alloc", "derive"], optional = true }
webpki = { package = "rustls-webpki", version = "0.102", optional = true }
x509-parser = { version = "0.16", optional = true }
thiserror = { version = "2", optional = true }
ring = { version = "0.17", optional = true }

[features]
client = [
    "dep:mainline",
    "dep:quinn",
    "dep:tracing",
    "dep:anyhow",
    "dep:rcgen",
    "dep:genawaiter",
    "dep:rustls",
    "dep:futures",
    "dep:postcard",
    "dep:tokio",
    "tls-utils",
]
tls-utils = [
    "dep:der",
    "dep:webpki",
    "dep:x509-parser",
    "dep:thiserror",
    "dep:ring",
]
default = ["client"]
