[package]
name = "iroh-mainline-content-discovery"
version = "0.6.0"
edition = "2021"
description = "Content discovery for iroh, using the bittorrent mainline DHT"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Required features for the protocol types.
#
# The protocol is using postcard, but we don't need a postcard dependency for just the type definitions
iroh = { workspace = true }
iroh-base = { workspace = true }
iroh-blobs = { workspace = true }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
derive_more = { version = "1.0.0-beta.1", features = ["debug", "display", "from", "try_into"] }
serde-big-array = "0.5.1"
hex = "0.4.3"

# Optional features for the client functionality
tracing = { version = "0.1", optional = true }
anyhow = { workspace = true, features = ["backtrace"], optional = true }
postcard = { workspace = true, features = ["alloc", "use-std"], optional = true }
genawaiter = { version = "0.99.1", features = ["futures03"], optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true }
n0-future = { workspace = true, optional = true }
futures-buffered = { workspace = true, optional = true }

[features]
client = [
    "dep:tracing",
    "dep:anyhow",
    "dep:genawaiter",
    "dep:postcard",
    "dep:tokio",
    "dep:n0-future",
    "dep:futures-buffered",
]
default = ["client"]
