[package]
name = "tls"
version = "0.1.0"
edition = "2021"
description = "create tls configuration for quic connections"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iroh-base = { workspace = true }
der = { version = "0.7", features = ["alloc", "derive"] }
derive_more = { version = "1.0.0-beta.1", features = ["debug", "display", "from", "try_into"] }
quinn = { package = "iroh-quinn", version = "0.12.0" }
rand = "0.8.5"
rcgen = "0.13"
ring = "0.17" 
rustls = { version = "0.23", default-features = false, features = ["ring"] }
thiserror = "2" 
tracing = "0.1"
webpki = { package = "rustls-webpki", version = "0.102" }
x509-parser = "0.16"
